<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_order_id"
            android:textSize="@dimen/content_text_size"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_order_id_adapter_rec_trans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_order_id1"
            android:textSize="@dimen/content_text_size"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iv_company_adapter_rec_trans"
                android:layout_width="75dp"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_complain_adapter_rec_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/complain_bg"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/str_trans_complain"
                android:textSize="@dimen/btn_content_text_small_size"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_company"
                        android:textSize="@dimen/popup_content_small_text_size"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_company_name_adapter_rec_trans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vodafone"
                        android:textSize="@dimen/popup_content_small_text_size"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_amount_label"
                        android:textSize="@dimen/popup_content_small_text_size"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_amount_adapter_rec_trans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_amount_no"
                        android:textSize="@dimen/popup_content_small_text_size"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_content_small_space_size"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_product"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_product_name_adapter_rec_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_product_name"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/list_content_small_space_size"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_service_type"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_service_type_adapter_rec_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobile"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_content_small_space_size"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobile No. : "
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_mo_no_adapter_rec_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_phone_no"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Search_OperatorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_content_small_space_size"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Operator Id: "
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_Search_OperatorId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Operator"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/list_content_small_space_size"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_date_time_adapter_rec_trans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_date_time"
                    android:textSize="@dimen/popup_content_small_text_size"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_status_adapter_rec_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_bg"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/str_trans_status"
                    android:textSize="@dimen/btn_content_text_small_size"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>